# deminer

./: CMakeLists.txt  README.md  costmap_plugins_old.xml  package.xml
config/: _e_costmap_common.yaml  _e_costmap_exploration.yaml  coordrun.rviz  costmap_common.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml
include/deminer/: geometry_tools.h  mine_layer.h  playsound.h
launch/: 2dec.launch  _deminer_client.launch  coordinate.launch  coordinate_click.launch  coordinate_point.launch  custom_amcl.launch  custom_move_base.launch  explore_test.launch  explore_test2.launch  just_the_map.launch  line_list.launch  map1.launch  test_node.launch  turtlebot_gazebo_gmapping.launch  turtlebot_gmapping.launch
maps/: StudyRoomGB02.pgm  StudyRoomGB02.yaml  StudyroomGB.pgm  StudyroomGB.yaml  deminingarea.pgm  deminingarea.yaml  godsbanen9310.pgm  godsbanen9310.yaml
msg/: Deminer.msg
rviz/: _deminer_client.rviz  demining2.rviz  lines_config.rviz
src/: boundary_selection.cpp  click.cpp  click_point.cpp  coord_run.cpp  create_mine.cpp  deminer_client.cpp  deminer_server(no_more_time).cpp  line_list.cpp  mine_layer.cpp  nav.cpp  vispose.cpp
srv/: GetNextTask.srv
