<?xml version="1.0"?>
<package>
  <name>deminer</name>
  <version>0.0.1</version>
  <description>The demining package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="khytti19@student.aau.dk">Kasper M. Hytting</maintainer>
  <maintainer email="khytti19@student.aau.dk">Maiken C. Langg</maintainer>
  <maintainer email="mlangg19@student.aau.dk">Kjartan N. Jespersen</maintainer>
  <maintainer email="jhamme19@student.aau.dk">Jesper P. Hammer</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/deminer</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>

  <build_depend>geometry_msgs</build_depend>

  <build_depend>roscpp</build_depend>

  <build_depend>std_msgs</build_depend>

  <build_depend>tf</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>

  <run_depend>geometry_msgs</run_depend>

  <run_depend>roscpp</run_depend>

  <run_depend>std_msgs</run_depend>

  <run_depend>tf</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend> 
  
  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>

  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>

  <build_depend>visualization_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>

  <build_depend>move_base_msgs</build_depend>
  <run_depend>move_base_msgs</run_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <run_depend>libpcl-all</run_depend>

 
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>